# Sevilla

./: .env.example  .gitignore  README.md  data_analysis.ipynb  pisos_sevilla_old.csv  pyproject.toml  requirements.txt  test.ipynb
.cursor/skills/python-pro/: SKILL.md  reference.md
idealista_scraper/: __init__.py  approaches.py  cli.py  config.py  export.py  fetcher.py  orchestrator.py  parsers.py  selectors.py
tests/: __init__.py  test_fetcher.py  test_parsers.py
tests/fixtures/: README.md  detail_page.html  search_page.html
